tests/parsing/smtlib/v2.7/errors/094_get-model_unclosed_1.smt2
(set-logic ALL)
(get-model _)
